# chess_engine

./: .gitignore  Cargo.toml  readme.md
examples/: engine.rs
src/: lib.rs  main.rs
src/board/: board.rs  engine.rs  mod.rs  moves.rs
src/boards/: board.rs  castling_rights.rs  color_board.rs  mod.rs  zobrist_hash.rs
src/database/: chess_table.rs  init.rs  mod.rs  models.rs  move_model.rs  pgn_game.rs  pgn_utility.rs
src/game_engine/: debug.rs  engine.rs  game_states.rs  get_move_row.rs  mod.rs  move_evaluation_context.rs  move_parsing.rs  move_piece_output.rs  move_results.rs  player_move.rs  utility.rs
src/lichess_api/: api_error.rs  lichess_requests.rs  mod.rs  models.rs
src/pieces/: mod.rs  moves.rs  piece.rs  static_positions.rs
src/simple_engine/: board.rs  color.rs  color_board.rs  debug.rs  engine.rs  mod.rs  move_results.rs  moves.rs  pieces.rs  player_move.rs  static_positions.rs  utility.rs
src/smart_engine/: config.rs  database.rs  engine.rs  evaluate.rs  heuristic.rs  mod.rs  next_move.rs  search_type.rs  transposition_table.rs  tree.rs  tree_builder.rs  tree_node.rs  utility.rs  values.rs
src/static_evaluation/: evaluator_trait.rs  mod.rs  utility.rs  values.rs
src/static_evaluation/evaluators/: advanced_evaluator.rs  (+3 more)
src/tree_search/: evaluate.rs  minimax_output.rs  mod.rs  node_with_score.rs  search_type.rs  transposition_table.rs  tree.rs  tree_builder.rs  tree_node.rs  tree_trait.rs  tree_traits.rs  utility.rs  values.rs
src/tree_search_v2/: mod.rs  search_result.rs  transposition_table.rs  tree.rs  tree_node.rs  tree_node_pool.rs
