[package]
name = "chess_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.4"
once_cell = "1.18"
directories-next = "2.0"
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
regex = "1.11.1"
reqwest = { version = "0.11", features = ["blocking"] }
urlencoding = "2.1"
derive_builder = "0.20.2"
